# nodejs-bazel

./: BUILD.bazel  MODULE.bazel  package-lock.json  package.json
src/: BUILD.bazel  index.js
