load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library")

js_library(
    name = "node_modules_lib",
    srcs = glob(["node_modules/**/*"]),
    visibility = ["//visibility:public"]
)

js_binary(
    name = "index",
    entry_point = "//src:index.js",  
    data = [
        "//src",  
    ],
)